# appfirewall-sdk

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: java-spring-boot-publish.yml  python-fastapi-publish.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md
docs/specs/: appfirewall-spring-boot.md
java/appfirewall-spring-boot/: README.md  build.gradle.kts  settings.gradle.kts
java/appfirewall-spring-boot/core/: build.gradle.kts
java/appfirewall-spring-boot/core/src/main/java/io/appfirewall/core/: Client.java
java/appfirewall-spring-boot/core/src/main/java/io/appfirewall/core/breaker/: BreakerState.java  CircuitBreaker.java
java/appfirewall-spring-boot/core/src/main/java/io/appfirewall/core/buffer/: EventBuffer.java  JsonEncoder.java  Shipper.java
java/appfirewall-spring-boot/core/src/main/java/io/appfirewall/core/classifier/: Classification.java  PathClassifier.java
java/appfirewall-spring-boot/core/src/main/java/io/appfirewall/core/config/: ClientConfig.java  Mode.java
java/appfirewall-spring-boot/core/src/main/java/io/appfirewall/core/context/: RequestContext.java
java/appfirewall-spring-boot/core/src/main/java/io/appfirewall/core/ip/: CfMetadata.java  CidrBlock.java  CloudflareRangeRegistry.java  IpLiteralParser.java  IpResolver.java  TrustedProxyConfig.java
java/appfirewall-spring-boot/core/src/main/java/io/appfirewall/core/ratelimit/: RateLimiter.java  SlidingWindowLimiter.java
java/appfirewall-spring-boot/core/src/test/java/io/appfirewall/core/breaker/: CircuitBreakerTest.java
java/appfirewall-spring-boot/core/src/test/java/io/appfirewall/core/buffer/: EventBufferTest.java  ShipperLocalModeTest.java
java/appfirewall-spring-boot/core/src/test/java/io/appfirewall/core/classifier/: PathClassifierTest.java
java/appfirewall-spring-boot/core/src/test/java/io/appfirewall/core/ip/: IpResolverTest.java
java/appfirewall-spring-boot/core/src/test/java/io/appfirewall/core/ratelimit/: SlidingWindowLimiterTest.java
java/appfirewall-spring-boot/starter/: build.gradle.kts
java/appfirewall-spring-boot/starter/src/main/java/io/appfirewall/spring/: AppFirewall.java  AppFirewallAutoConfiguration.java  AppFirewallProperties.java
java/appfirewall-spring-boot/starter/src/main/java/io/appfirewall/spring/context/: RequestContextHolder.java  RequestContextHolderStrategy.java  ServletRequestContextHolderStrategy.java
java/appfirewall-spring-boot/starter/src/main/java/io/appfirewall/spring/health/: AppFirewallHealthIndicator.java
java/appfirewall-spring-boot/starter/src/main/java/io/appfirewall/spring/reactive/: AppFirewallWebFilter.java
java/appfirewall-spring-boot/starter/src/main/java/io/appfirewall/spring/servlet/: AppFirewallFilter.java
java/appfirewall-spring-boot/starter/src/test/java/io/appfirewall/spring/: AppFirewallIntegrationTest.java
python/appfirewall-fastapi/: README.md  pyproject.toml
python/appfirewall-fastapi/example/: README.md  app.py
python/appfirewall-fastapi/src/appfirewall_fastapi/: __init__.py  _breaker.py  _buffer.py  _cf_ranges.py  _client.py  _middleware.py  _shield.py
python/appfirewall-fastapi/tests/: test_fail_open.py  test_ip.py
src/appfirewall_fastapi/: __init__.py  _buffer.py  _classifier.py  _context.py  _ip.py  _ratelimit.py
tests/: conftest.py  test_classifier.py  test_middleware.py  test_ratelimit.py
