[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "appfirewall-fastapi"
dynamic = ["version"]
description = "Origin-side abuse signal middleware for FastAPI apps behind Cloudflare. Part of AppFirewall by Sireto."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Sireto" }]
keywords = ["fastapi", "cloudflare", "security", "abuse", "middleware", "appfirewall", "waf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
    "starlette>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.80",
    "fastapi>=0.100",
    "mypy>=1.5",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://appfirewall.io"
Documentation = "https://appfirewall.io/docs"
Repository = "https://github.com/sireto/appfirewall-fastapi"
Issues = "https://github.com/sireto/appfirewall-fastapi/issues"

[tool.hatch.version]
source = "vcs"
# Per-SDK tag prefix so the monorepo can release each SDK independently.
# Tag like `python-fastapi-v0.2.0` to ship 0.2.0.
tag-pattern = '^python-fastapi-v(?P<version>[^-]+)$'

[tool.hatch.version.raw-options]
# pyproject.toml lives two directories deep in the monorepo
# (python/appfirewall-fastapi/), but the .git directory is at the top.
root = "../.."
search_parent_directories = true
# Restrict git describe to this SDK's tag prefix so unrelated tags from
# sibling SDKs don't confuse version derivation. Legacy `v0.1.x` tags
# have been aliased to `python-fastapi-v0.1.x` so they remain anchors.
git_describe_command = [
    "git", "describe", "--dirty", "--tags", "--long",
    "--match", "python-fastapi-v*",
]
# PyPI rejects PEP 440 local-version segments (the `+gSHA` part). Drop it
# so non-tag builds (e.g. workflow_dispatch from main between releases)
# still produce uploadable pre-release versions like `0.1.2.dev6`.
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/appfirewall_fastapi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]
